--- a/client/painel/css/painel.css
+++ b/client/painel/css/painel.css
@@ -805,3 +805,9 @@ div.dataTables_wrapper div.dataTables_filter label {
 .upload #fileElem {
     display: none;
 }
+
+/* Tab Horários */
+
+.form-control.error {
+    border: 1px solid var(--color-red)!important;
+}
