--- a/client/painel/css/painel.css
+++ b/client/painel/css/painel.css
@@ -811,3 +811,36 @@ div.dataTables_wrapper div.dataTables_filter label {
 .form-control.error {
     border: 1px solid var(--color-red)!important;
 }
+
+/* Modal de Cadastro / Edição */
+
+.modal-form .modal-content, .modal-form .modal-header {
+    background-color: var(--color-white);
+}
+
+.modal-form .modal-header {
+    border-bottom: 1px solid #f5f5f5;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.modal-form .modal-header:before {
+    content: none;
+}
+
+.modal-form .modal-body {
+    padding: 20px;
+}
+
+.modal-form .footer-btn {
+    margin-top: 0px!important;
+}
+
+.fa-select, .fa-select option {
+    font-family: 'Lato', 'Font Awesome 5 Free';
+    font-weight: 900;
+}
+
+.red {
+    color: var(--color-red);
+}
