--- a/client/painel/css/painel.css
+++ b/client/painel/css/painel.css
@@ -844,3 +844,38 @@ div.dataTables_wrapper div.dataTables_filter label {
 .red {
     color: var(--color-red);
 }
+
+
+/* Modal Opcionais Produto */
+
+div#addOpcional {
+    background: var(--color-white);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: 15px;
+    display: hidden;
+}
+
+.float-right {
+    float: right;
+}
+
+.flex-hint {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border-left: 5px solid var(--color-primary);
+    background-color: #ebebeb;
+    border-radius: 10px;
+}
+
+.rascunho {
+    float: right;
+    color: var(--color-black);
+    background-color: #e1e1e1;
+    padding: 6px 10px;
+    font-size: 11px;
+}
