--- a/client/css/main.css
+++ b/client/css/main.css
@@ -37,6 +37,10 @@ body {
     display: none !important;
 }
 
+.pr-0 {
+    padding-right: 0px!important;
+}
+
 b {
     font-family: 'PoppinsMedium', 'Rubik', sans-serif;
 }
@@ -456,6 +460,10 @@ a.container-voltar {
     height: 50px;
 }
 
+textarea {
+    height: 150px!important;
+}
+
 .menu-bottom.details {
     justify-content: space-between;
     padding: 8px 15px;
@@ -741,4 +749,55 @@ p.quant-item {
 .card-status-pedido.cancelado .img-icon-details {
     background-color: var(--color-red);
     color: var(--color-white);
+}
+
+
+/* Modal actions */
+
+.modal-actions {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: rgb(0 0 0 / 70%);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    flex-direction: column;
+}
+
+.backdrop {
+    flex: 1;
+    width: 100%;
+    height: 100%;
+}
+
+.width-fix.container-modal-actions {
+    width: 100%;
+    padding: 20px 30px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.width-fix.container-modal-actions a {
+    text-decoration: none!important;
+    width: 100%;
+    display: block;
+    padding: 15px;
+    text-align: center;
+}
+
+.width-fix.container-modal-actions a:first-child {
+    border-bottom: 1px solid var(--color-separate);
+}
+
+.color-red {
+    color: var(--color-red);
 }
