--- a/client/css/main.css
+++ b/client/css/main.css
@@ -792,10 +792,11 @@ p.quant-item {
     display: block;
     padding: 15px;
     text-align: center;
+    border-bottom: 1px solid var(--color-separate);
 }
 
-.width-fix.container-modal-actions a:first-child {
-    border-bottom: 1px solid var(--color-separate);
+.width-fix.container-modal-actions a:last-child {
+    border: none;
 }
 
 .color-red {
