tela de Relatório de Faturamento finalizada

--- a/client/painel/css/painel.css
+++ b/client/painel/css/painel.css
@@ -885,3 +885,17 @@ div#addOpcional {
 #modalOpcionaisProduto .container-group:last-child {
     border-bottom: none;
 }
+
+
+/* Gráfico */
+
+p#lblNenhumFaturamento {
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 175px;
+    font-size: 18px;
+    color: #000;
+}
